--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-node_modules
-# Keep environment variables out of version control
-.env
+**/node_modules
 
-/src/generated/prisma
+**/dist
+**/build
+**/.next
+
+# File environment
+.env
+.env.*
+*.env
+
 *.db
